--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,9 +2,13 @@
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
   = devise_error_messages!
   %p
-    = f.label :name
+    = f.label :firstname
     %br/
-    = f.text_field :name
+    = f.text_field :firstname
+  %div
+    = f.label :lastname
+    %br/
+    = f.text_field :lastname
   %div
     = f.label :email
     %br/
