--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -8,8 +8,6 @@
         %span.icon-bar
         %span.icon-bar
       = link_to 'Home','home',class: 'navbar-brand'
-      = link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook),class: 'navbar-brand'
-      = link_to 'Sign in with Github',user_omniauth_authorize_path(:github),class: 'navbar-brand'
     .collapse.navbar-collapse
-      %ul.nav.navbar-nav
+      %ul.nav.navbar-nav.pull-right
         = render 'layouts/navigation_links'
