--- a/app/views/message/index.html.haml
+++ b/app/views/message/index.html.haml
@@ -6,7 +6,5 @@
   %textarea.form-control#message
   %br
   .row
-    .col-md-10
-    .col-md-2
-      %button.btn.btn-success#send_message
-        Send message
+    %button.btn.btn-success.pull-right#send_message
+      Send message
