last update this branch

--- a/app/views/message/_rooms.html.haml
+++ b/app/views/message/_rooms.html.haml
@@ -1,32 +1,32 @@
 %li.active
-  %a{:href=>"message/1"}
+  %a{:href=>"../message/1"}
     Moroka
 %li
-  %a{:href=>"message/1"}
+  %a{:href=>"../message/1"}
     Galas
 %li
-  %a{:href=>"message/1"}
+  %a{:href=>"../message/1"}
     Moroka
 %li
-  %a{:href=>"message/1"}
+  %a{:href=>"../message/1"}
     Galas
     %span.badge.pull-right 42
 %li
-  %a{:href=>"message/1"}
+  %a{:href=>"../message/1"}
     Moroka
 %li
-  %a{:href=>"message/1"}
+  %a{:href=>"../message/1"}
     Galas
 %li
-  %a{:href=>"message/1"}
+  %a{:href=>"../message/1"}
     Moroka
 %li
-  %a{:href=>"message/1"}
+  %a{:href=>"../message/1"}
     Galas
 %li
-  %a{:href=>"message/1"}
+  %a{:href=>"../message/1"}
     Moroka
 %li
-  %a{:href=>"message/1"}
-    %span.glyphicon.glyphicon-plus
+  =link_to new_room_path do
+    %span.glyphicon.glyphicon-plus 
     Create room
