--- a/app/views/message/show.html.haml
+++ b/app/views/message/show.html.haml
@@ -6,14 +6,14 @@
       -@messages.each do |message|
         -if message.user_id==current_user.id
           .message.to
-            =message.user.login+": "+message.body
+            ="#{message.user.login}: #{message.body}"
             %span.pull-right.time
-              =message.created_at.strftime("%a %T")
+              ="#{message.created_at.strftime("%a %T")}"
         -else
           .message.from
-            =message.user.login+": "+message.body
+            ="#{message.user.login}: #{message.body}"
             %span.pull-right.time
-              =message.created_at.strftime("%a %T")
+              ="#{message.created_at.strftime("%a %T")}"
     %br
     %textarea.form-control#message
     %br
