--- a/app/views/message/_rooms.html.haml
+++ b/app/views/message/_rooms.html.haml
@@ -1,30 +1,30 @@
 %li.active
-  %a{:href=>"../message/1"}
+  %a{:href=>"#"}
     Moroka
 %li
-  %a{:href=>"../message/1"}
+  %a{:href=>"#"}
     Galas
 %li
-  %a{:href=>"../message/1"}
+  %a{:href=>"#"}
     Moroka
 %li
-  %a{:href=>"../message/1"}
+  %a{:href=>"#"}
     Galas
     %span.badge.pull-right 42
 %li
-  %a{:href=>"../message/1"}
+  %a{:href=>"#"}
     Moroka
 %li
-  %a{:href=>"../message/1"}
+  %a{:href=>"#"}
     Galas
 %li
-  %a{:href=>"../message/1"}
+  %a{:href=>"#"}
     Moroka
 %li
-  %a{:href=>"../message/1"}
+  %a{:href=>"#"}
     Galas
 %li
-  %a{:href=>"../message/1"}
+  %a{:href=>"#"}
     Moroka
 %li
   =link_to new_room_path do
