--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -10,6 +10,12 @@ img {
 .navbar-brand {
   font-size: inherit;
   }
+.reg-form{
+background-size: cover;
+background-position: 50% 50%;
+}
+
+
 
 // THESE ARE EXAMPLES YOU CAN MODIFY
 // create your own classes
@@ -32,12 +38,11 @@ img {
   }
 // apply styles to HTML elements
 // to make views framework-neutral
-main {
+#main {
   @extend .container;
-  background-color: #eee;
-  padding-bottom: 80px;
+  margin-top:60px;
   width: 100%;
-  margin-top: 51px; // accommodate the navbar
+  height: 100%;
   }
 section {
   @extend .row;
@@ -51,10 +56,12 @@ section {
   padding-top: 30px;
   max-width: 320px;
   margin: 0 auto;
+  opacity: 0.89;
 }
 .authform form {
   @extend .well;
   @extend .well-lg;
+  margin:20% auto;
   padding-bottom: 40px;
 }
 .authform .right {
