--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,6 +2,7 @@
 %html
   %head
     = include_gon(:init => true)
+    %script{:src=>"http://js.pusher.com/2.1/pusher.min.js"}
     %meta{:name => "viewport", :content => "width=device-width, initial-scale=1.0"}
     %title= content_for?(:title) ? yield(:title) : 'Chat'
     %meta{:name => "description", :content => "#{content_for?(:description) ? yield(:description) : 'Chat'}"}
@@ -9,10 +10,10 @@
     = stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
-  %body
+  %body{:style=>("background-image:url('../background/#{background_image()}');" unless user_signed_in?)}
     #wrapper
       %header
         = render 'layouts/navigation'
-      %main{:role => "main"}
+      #main{:role => "main"}
         = render 'layouts/messages'
         = yield
