--- a/app/views/message/index.html.haml
+++ b/app/views/message/index.html.haml
@@ -1,27 +1,31 @@
-%input.form-control#search{:placeholder=>"Search...",:type=>"search"}
-.container-fluid
-  .span6.content
-    %br
-    #messages-wrapper
-      -@messages.each do |message|
-        -if message.user_id==current_user.id
-          %pre.message.to
-            .message_login
-              =message.user.login+":"
-            .message_body
-              =message.body
-            %span.pull-right.time
-              =message.created_at.strftime("%a %T")
-        -else
-          %pre.message.from
-            .message_login
-              =message.user.login+":"
-            .message_body
-              =message.body
-            %span.pull-right.time
-              =message.created_at.strftime("%a %T")
-    %br
-    .navbar-fixed-bottom.row-fluid
-      %textarea.form-control#message
-      %button.btn.btn-success#send_message
-        Send message
+.panel.panel-primary
+  .panel-body
+    %ul.chat
+      #messages-wrapper
+        -@messages.each do |message|
+          -if message.user_id==current_user.id
+            %li.from.clearfix
+              %span.chat-img.pull-left
+                %img.img-circle{:alt => "User Avatar", :src => "http://placehold.it/50/55C1E7/fff&text=ME"}/
+              .chat-body.clearfix
+                .header
+                  %strong.primary-font=message.user.login
+                  %small.pull-right.text-muted
+                    %span.glyphicon.glyphicon-time
+                    =message.created_at.strftime("%a %T")
+                %p=message.body
+          -else
+            %li.to.clearfix
+              %span.chat-img.pull-left
+                %img.img-circle{:alt => "User Avatar", :src => "http://placehold.it/50/FA6F57/fff&text=U"}/
+              .chat-body.clearfix
+                .header
+                  %strong.primary-font=message.user.login
+                  %small.pull-right.text-muted
+                    %span.glyphicon.glyphicon-time
+                    =message.created_at.strftime("%a %T")
+                %p=message.body
+  .panel-footer
+    %textarea.form-control#message
+    %button.btn.btn-success#send_message
+      Send message
