--- a/app/views/message/show.html.haml
+++ b/app/views/message/show.html.haml
@@ -6,8 +6,8 @@
       -@messages.each do |message|
         -if message.user_id==current_user.id
           %pre.message.to
-            .message_login
-              =message.user.firstname+":"
+            %p.message_login{"data-target"=>"#myModal", "data-toggle"=>"modal"}#{message.user.login}
+
             .message_body
               =message.body
             %span.pull-right.time
@@ -15,13 +15,23 @@
         -else
           %pre.message.from
             .message_login
-              =message.user.firstname+":"
+              %p{"data-target"=>"#myModal", "data-toggle"=>"modal"}#{message.user.login}
             .message_body
               =message.body
             %span.pull-right.time
               =message.created_at.strftime("%a %T")
     %br
-    %textarea.form-control#message
-    %br
-    %button.btn.btn-success#send_message
-      Send message
+    .navbar-fixed-bottom.row-fluid
+      %textarea.form-control#message
+      %button.btn.btn-success#send_message
+        Send message
+.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "myModalLabel",role: "dialog", tabindex: "-1", id:"myModal"}
+  .modal-dialog
+    .modal-content
+      .modal-header
+        %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", type: "button"} ×
+        %h4#myModalLabel.modal-title Profile
+        .modal-body
+          User info
+        .modal-footer
+          %button.btn.btn-default{"data-dismiss" => "modal", type: "button"} Close
