Add message sound

--- a/app/views/message/show.html.haml
+++ b/app/views/message/show.html.haml
@@ -1,4 +1,7 @@
 %input.form-control#search{:placeholder=>"Search...",:type=>"search"}
+%audio#new-message
+  %source{:src=>"../sounds/button_tiny.ogg", :type=>"audio/ogg"}
+  %source{:src=>"../sounds/button_tiny.mp3", :type=>"audio/mp3"}
 .container-fluid
   .span6.content
     %br
