--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,13 +3,13 @@
     My profile
   %p
     User name:
-    = @user.firstname + ' ' + @user.lastname
+    = "#{@user.firstname} #{@user.lastname}"
   %h3
     Friends
   %ul
     - for friendship in @user.friendships
       %li
-        = friendship.friend.firstname + ' ' + friendship.friend.lastname
+        = "#{friendship.friend.firstname} #{friendship.friend.lastname}"
         = link_to 'Remove', friendship, :method => :delete
   -#- if @user.inverse_friends.count > 0
   -#  %h3
