creating rooms with ajax

--- a/app/views/rooms/_form.html.haml
+++ b/app/views/rooms/_form.html.haml
@@ -7,4 +7,4 @@
       = "Topic: "
       =f.text_field :topic, class: 'form-control'
     .action
-      = f.submit 'create', :class => 'button right'
+      = button_tag 'create', :class => 'button right'
