--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,9 +11,9 @@
     = javascript_include_tag "application", "data-turbolinks-track" => true
     = csrf_meta_tags
   %body{:style=>("background-image:url('../background/#{background_image()}');" unless user_signed_in?)}
-    .container-fluid
+    .container-fluid.navbar-fixed-top
       %header
         = render 'layouts/navigation'
-      .row.navbar-fixed-bottom
+      .row-fluid
         = render 'layouts/messages'
         = yield
