add pusher auth sending messages only to users in room

--- a/app/views/layouts/_inet.html.haml
+++ b/app/views/layouts/_inet.html.haml
@@ -1,7 +1,7 @@
 .col-md-2
-  = render 'layouts/left_panel'
+  = render 'layouts/friend_list'
 .col-md-8
   = render 'layouts/messages'
   = yield
 .col-md-2
-  = render 'layouts/rigth_panel'
+  = render 'layouts/friends_in_rooms'
