--- a/app/views/rooms/_form.html.haml
+++ b/app/views/rooms/_form.html.haml
@@ -1,6 +1,5 @@
-
 .authform
-  = form_for @new_room do |f|
+  = form_for (@new_room)  do |f|
     .form-group
       = "Name:"
       =f.text_field :name, class: 'form-control'
