--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -1,4 +1,5 @@
 .col-md-2
-  = render 'message/rooms'
+  = render 'layouts/friend_list'
+= render 'message/dialog'
 .col-md-2
-  = render 'message/room_users'
+  = render 'layouts/friends_in_rooms'
