--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -7,6 +7,11 @@
   %h3
     User List
   - @possible_friends.each  do |user|
-    %p
-      = link_to user.firstname + ' ' + user.lastname, user_path(user.id)
-      = link_to 'Add Friend', friendships_path(:friend_id => user), :method => :post
+    %div.some{:style => "position: relative; margin-top:40px;"}
+      =image_tag avatar_url(user,50),:class => "avatar", :style =>"float: left"
+      %div.some{:style => "position: relative; top:12px;"}
+        = link_to user.firstname + ' ' + user.lastname, user_path(user.id)
+        = link_to 'Add Friend', friendships_path(:friend_id => user), :method => :post
+
+
+
