--- a/app/views/message/show.html.haml
+++ b/app/views/message/show.html.haml
@@ -12,7 +12,8 @@
                   =image_tag avatar_url(message.user, 50),:class => "avatar",:alt=>""
                 .chat-body.clearfix
                   .header
-                    %strong.primary-font=message.user.login
+                    %strong.primary-font
+                      =link_to message.user.login, user_path(message.user.id)
                     %small.pull-right.text-muted
                       %span.glyphicon.glyphicon-time
                       =message.created_at.strftime("%a %T")
@@ -23,7 +24,8 @@
                   =image_tag avatar_url(message.user, 50),:class => "avatar",:alt=>""
                 .chat-body.clearfix
                   .header
-                    %strong.primary-font=message.user.login
+                    %strong.primary-font
+                      =link_to message.user.login, user_path(message.user.id)
                     %small.pull-right.text-muted
                       %span.glyphicon.glyphicon-time
                       =message.created_at.strftime("%a %T")
