--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -1,5 +1,4 @@
-= "Name:"
-= @room.name
-%br
-= "Topic:"
-= @room.topic
+.col-md-2
+  = render 'message/rooms'
+.col-md-2
+  = render 'message/room_users'
