--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -1,10 +1,30 @@
 body {
-    margin-top: 50px;
+    margin-top: 50%;
     width: 100%;
     height: 100%;
     min-height:100%;
     background-size: cover;
     background-position: 50% 50%;
+    background-color: #eee;
+    /*overflow-y: scroll;*/
+    /*margin-bottom: 10%;*/
+    background-attachment:fixed;
+}
+
+.dropdown.user-dropdown ul{
+}
+.side-nav-rigth{
+    margin-right: 0px;
+    right: 0px;
+    display: inline;
+    width: 205px;
+    position: fixed;
+    top: 50px;
+    height: 100%;
+    border-radius: 0;
+    border: none;
+    background-color: #222222;
+    overflow-y: auto;
 }
 #send_message{
     width: 100%;
@@ -20,215 +40,54 @@ body {
 }
 
 
-pre  {
+pre {
     white-space: pre-line;
-    overflow-x: hidden;      /* css-3 */
-    white-space: -moz-pre-line;  /* Mozilla, since 1999 */
-    white-space: -pre-line;      /* Opera 4-6 */
-    white-space: -o-pre-line;    /* Opera 7 */
-    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+    overflow-x: hidden; /* css-3 */
+    white-space: -moz-pre-line; /* Mozilla, since 1999 */
+    white-space: -pre-line; /* Opera 4-6 */
+    white-space: -o-pre-line; /* Opera 7 */
+    word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
 
-.messages-wrapper {
-    padding-top: 10px;
-    position: relative;
-    border: 1px solid #ddd;
-    border-top: 0 none;
-}
-.message {
-    border-radius: 20px 20px 20px 20px;
-    margin: 0 15px 10px;
-    padding: 15px 20px;
-    position: relative;
-}
+.side-nav {
+    margin-left: -205px;
+    left: 205px;
+    position: fixed;
+    width: 205px;
 
-
-.message_login{
-    text-decoration: underline;
-    font-size: 14px;
-    font-weight: bold;
-    margin: -20px 200px 0px 0px;
-}
-.message_body{
-    position: relative;
-    float: left;
-    width: 50%;
-    margin: -35px 0px 0px 0px;
-     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-.time{
-    margin: -85px 0px 0px 0px;
-    float: left;
-    display:inline-block;
-    font-size: 0.86em;
-    opacity: 0.4;
-
-}
-.message.to {
-    height: 50%;
-    background-color: rgba(0,105,255, 0.7);
-    color: #ffffff;
-    margin-left: 80px;
-}
-.message.from {
-    background-color: #E5E4E9;
-    color: #363636;
-    margin-right: 80px;
-}
-.message.to + .message.to,
-.message.from + .message.from {
-    margin-top: -7px;
-}
-.message:before {
-    border-color: #2095FE;
-    border-radius: 50% 50% 50% 50%;
-    border-style: solid;
-    border-width: 0 20px;
-    bottom: 0;
-    clip: rect(20px, 35px, 42px, 0px);
-    content: " ";
-    height: 40px;
-    position: absolute;
-    right: -50px;
-    width: 30px;
-    z-index: -1;
-}
-.message.from:before {
-    border-color: #E5E4E9;
-    left: -50px;
-    -webkit-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
-    transform: rotateY(180deg);
-}
-
-/* Nav Announcements */
-
-.announcement-heading {
-    font-size: 50px;
-    margin: 0;
-}
-
-.announcement-text {
-    margin: 0;
-}
-
-/* Table Headers */
-
-table.tablesorter thead {
-    cursor: pointer;
-}
-
-table.tablesorter thead tr th:hover {
-    background-color: #f5f5f5;
-}
-
-/* Flot Chart Containers */
-
-.flot-chart {
-    display: block;
-    height: 400px;
-}
-
-.flot-chart-content {
-    width: 100%;
+    top: 50px;
     height: 100%;
+    border-radius: 0;
+    border: none;
+    background-color: #222222;
+    overflow-y: none;
 }
 
-/* Edit Below to Customize Widths > 768px */
-@media (min-width:768px) {
 
-    /* Bootstrap Default Overrides - Customized Dropdowns for the Side Nav */
-
-
-    .side-nav>li.dropdown>ul.dropdown-menu>li>a {
-        color: #999999;
-        padding: 15px 15px 15px 25px;
-    }
-
-    .side-nav>li.dropdown>ul.dropdown-menu>li>a:hover,
-    .side-nav>li.dropdown>ul.dropdown-menu>li>a.active,
-    .side-nav>li.dropdown>ul.dropdown-menu>li>a:focus {
-        color: #fff;
-        background-color: #080808;
-    }
-
-    .navbar-inverse .navbar-nav>li>a:hover,
-    .navbar-inverse .navbar-nav>li>a:focus {
-        background-color: #080808;
-    }
+.side-nav>li.dropdown>ul.dropdown-menu {
+    position: relative;
+    min-width: 205px;
+    margin: 0;
+    padding: 0;
+    border: none;
+    border-radius: 0;
+    background-color: transparent;
+    box-shadow: none;
+    -webkit-box-shadow: none;
 
 }
 
-.about {
-    margin: 70px auto 40px;
-    padding: 8px;
-    width: 260px;
-    font: 10px/18px 'Lucida Grande', Arial, sans-serif;
-    color: #bbb;
-    text-align: center;
-    text-shadow: 0 -1px rgba(0, 0, 0, 0.3);
-    background: #383838;
-    background: rgba(34, 34, 34, 0.8);
-    border-radius: 4px;
-    background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
-    background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
-    background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
-    -webkit-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2), 0 0 6px rgba(0, 0, 0, 0.4);
-    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2), 0 0 6px rgba(0, 0, 0, 0.4);
-}
-.about a {
-    color: #eee;
-    text-decoration: none;
-    border-radius: 2px;
-    -webkit-transition: background 0.1s;
-    -moz-transition: background 0.1s;
-    -o-transition: background 0.1s;
-    transition: background 0.1s;
-}
-.about a:hover {
-    text-decoration: none;
-    background: #555;
-    background: rgba(255, 255, 255, 0.15);
+.side-nav>li>a {
+    width: 205px;
 }
 
-.about-links {
-    height: 30px;
-}
-.about-links > a {
-    float: left;
-    width: 50%;
-    line-height: 30px;
-    font-size: 12px;
+.navbar-inverse .navbar-nav>li>a:hover,
+.navbar-inverse .navbar-nav>li>a:focus {
+    background-color: #080808;
 }
 
-.about-author {
-    margin-top: 5px;
-}
-.about-author > a {
-    padding: 1px 3px;
-    margin: 0 -1px;
-}
-
-/*
- * Copyright (c) 2012-2013 Thibaut Courouble
- * http://www.cssflow.com
- *
- * Licensed under the MIT License:
- * http://www.opensource.org/licenses/mit-license.php
- */
 
 
-.container {
-    margin: 50px auto;
-    width: 640px;
-}
-
-input {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size: 13px;
-    color: #555860;
-}
 
 .search {
     position: relative;
@@ -372,4 +231,32 @@ input {
 
 .lt-ie9 .search input {
     line-height: 26px;
+}
+@media (min-width:768px) {
+
+    /* Wrappers */
+
+    #wrapper {
+        padding-left: 205px;
+        padding-right: 205px;
+    }
+
+}
+@media (min-width:992px) {
+
+    .navbar-header {
+        padding-top: 0px;
+    }
+}
+@media (min-width:456px) {
+
+    .side-nav-rigth {
+        margin-top: 0px;
+    }
+    .col-md-8{
+        top: -1px;
+    }
+    .side-nav{
+        margin-top: 0px;
+    }
 }
