--- a/app/views/message/show.html.haml
+++ b/app/views/message/show.html.haml
@@ -1,31 +1,40 @@
-%input.form-control#search{:placeholder=>"Search...",:type=>"search"}
-%audio#new-message
-  %source{:src=>"../sounds/button_tiny.ogg", :type=>"audio/ogg"}
-  %source{:src=>"../sounds/button_tiny.mp3", :type=>"audio/mp3"}
-.container-fluid
-  .span6.content
-    %br
-    #messages-wrapper
-      -@messages.each do |message|
-        -if message.user_id==current_user.id
-          %pre.message.to
-            .message_login
-              =message.user.login+":"
-            .message_body
-              =message.body
-            %span.pull-right.time
-              =message.created_at.strftime("%a %T")
-        -else
-          %pre.message.from
-            .message_login
-              =message.user.login+":"
-            .message_body
-              =message.body
-            %span.pull-right.time
-              =message.created_at.strftime("%a %T")
-    %br
-    .navbar-fixed-bottom.row-fluid
+.col-md-2
+  = render 'layouts/left_panel'
+.col-md-8
+  .panel.panel-primary
+    .panel-body
+      %ul.chat
+        #messages-wrapper
+          -@messages.each do |message|
+            -if message.user_id==current_user.id
+              %li.from.clearfix
+                %span.chat-img.pull-left
+                  =image_tag avatar_url(message.user),:class => "avatar",:alt=>""
+                .chat-body.clearfix
+                  .header
+                    %strong.primary-font=message.user.login
+                    %small.pull-right.text-muted
+                      %span.glyphicon.glyphicon-time
+                      =message.created_at.strftime("%a %T")
+                  %p=message.body
+            -else
+              %li.to.clearfix
+                %span.chat-img.pull-left
+                  =image_tag avatar_url(message.user),:class => "avatar",:alt=>""
+                .chat-body.clearfix
+                  .header
+                    %strong.primary-font=message.user.login
+                    %small.pull-right.text-muted
+                      %span.glyphicon.glyphicon-time
+                      =message.created_at.strftime("%a %T")
+                  %p=message.body
+    .panel-footer
       #request-user
       %textarea.form-control#message
       %button.btn.btn-success#send_message
         Send message
+%audio#new-message
+  %source{:src=>"../sounds/button_tiny.ogg", :type=>"audio/ogg"}
+  %source{:src=>"../sounds/button_tiny.mp3", :type=>"audio/mp3"}
+.col-md-2
+  = render 'layouts/rigth_panel'
