--- a/app/views/rooms/new.html.haml
+++ b/app/views/rooms/new.html.haml
@@ -1,1 +1,5 @@
 = render 'rooms/form'
+%ul.nav.navbar-nav.side-nav
+  = render 'message/rooms'
+%ul.nav.navbar-nav.side-nav-right
+  = render 'message/room_users'
