--- a/app/assets/stylesheets/chat.css
+++ b/app/assets/stylesheets/chat.css
@@ -1,3 +1,4 @@
+/*my*/
 .navbar-fixed-bottom {
     top: 51px;
 }
@@ -14,8 +15,12 @@
 
 .avatar{
     border-radius: 15px;
-
 }
+.bootstrap-growl.alert.alert-success{
+    background-color: rgba(10,10,10,0.7);
+    color:white;
+}
+
 .container-fluid.navbar-fixed-top{
     top:50px;
 }
@@ -110,3 +115,4 @@
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
     background-color: #555;
 }
+/*my-end*/
