--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -1,3 +1,4 @@
+//my
 // import the CSS framework
 @import "bootstrap";
 
@@ -99,3 +100,4 @@ section {
   @extend .btn-primary;
   @extend .btn-xs;
 }
+//my-end
