--- a/app/views/message/_dialog.html.haml
+++ b/app/views/message/_dialog.html.haml
@@ -3,6 +3,8 @@
     .panel-body
       %ul.chat
         #messages-wrapper
+          :javascript
+            emojify.run()
           - if @messages
             -@messages.each do |message|
               -if message.user_id==current_user.id
