--- a/app/views/layouts/_friends_in_rooms.haml
+++ b/app/views/layouts/_friends_in_rooms.haml
@@ -4,5 +4,5 @@
       - @room_users.each do |user|
         %li.joined_friend{:data_user_id => user.id, :data_room_id => @room.id}
           %a{:href=>"#"}
-            = "#{user.firstname} #{user.lastname}"
+            = "#{user.login}"
             .glyphicon.glyphicon-minus.pull-right
