--- a/app/views/message/_dialog.html.haml
+++ b/app/views/message/_dialog.html.haml
@@ -15,7 +15,7 @@
                       %small.pull-right.text-muted
                         %span.glyphicon.glyphicon-time
                         =message.created_at.strftime("%a %T")
-                    %p=with_link message.body
+                    %p=message.body
               -else
                 %li.to.clearfix
                   %span.chat-img.pull-left
@@ -26,7 +26,7 @@
                       %small.pull-right.text-muted
                         %span.glyphicon.glyphicon-time
                         =message.created_at.strftime("%a %T")
-                    %p=with_link message.body
+                    %p=message.body
     .panel-footer
       %textarea.form-control#message
       %button.btn.btn-success#send_message
