--- a/app/views/message/_room_users.html.haml
+++ b/app/views/message/_room_users.html.haml
@@ -3,10 +3,6 @@
     - if !@room_users.nil?
       - @room_users.each do |user|
         %li.joined_friend{:data_user_id => user.id, :data_room_id => @room.id}
-          -#= link_to rooms_user_path(:id => user.id, :room_id => @room.id), :method => :delete do
-          = "#{user.firstname} #{user.lastname}"
-<<<<<<< HEAD
+          = "#{user.login}"
           %span.glyphicon.glyphicon-minus.pull-right
-=======
-          %span.glyphicon.glyphicon-minus.pull-right
->>>>>>> 4e5c26566a116d042684198a641a5ba293a72979
+
