--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -11,7 +11,12 @@ body {
     /*margin-bottom: 10%;*/
     background-attachment:fixed;
 }
-
+.to-user{
+    background-color:blue;
+    border-radius:3px;
+    padding-left:3px;
+    padding-right:3px;
+}
 .dropdown.user-dropdown ul{
 }
 .side-nav-rigth{
