fix to user in js and css

--- a/app/views/message/_dialog.html.haml
+++ b/app/views/message/_dialog.html.haml
@@ -28,6 +28,7 @@
                         =message.created_at.strftime("%a %T")
                     %p=message.body
     .panel-footer
+      #request-user
       %textarea.form-control#message
       %button.btn.btn-success#send_message
         Send message
