--- a/app/views/layouts/_friend_list.html.haml
+++ b/app/views/layouts/_friend_list.html.haml
@@ -6,7 +6,7 @@
       - current_user.friends.each do |friend|
         %li.user_friend{:data_user_id => friend.id, :data_room_id => @room.id}
           %a.glyphicon.glyphicon-plus.pull-right{:href=>"#"}
-            = "#{friend.firstname}#{friend.lastname}"
+            = "#{friend.login}"
     %li
       = link_to new_room_path do
         %span.glyphicon.glyphicon-plus
