--- a/app/views/message/_dialog.html.haml
+++ b/app/views/message/_dialog.html.haml
@@ -9,7 +9,7 @@
               -if message.user_id==current_user.id
                 %li.from.clearfix
                   %span.chat-img.pull-left
-                    =image_tag avatar_url(message.user,50),:class => "avatar",:alt=>""
+                    =image_tag avatar_url(message.user,50),:class => "avatar"
                   .chat-body.clearfix
                     .header
                       %strong.primary-font
@@ -21,7 +21,7 @@
               -else
                 %li.to.clearfix
                   %span.chat-img.pull-left
-                    =image_tag avatar_url(message.user,50),:class => "avatar",:alt=>""
+                    =image_tag avatar_url(message.user,50),:class => "avatar"
                   .chat-body.clearfix
                     .header
                       %strong.primary-font
