--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,20 +1,20 @@
 %h2
   = link_to "#{current_user.firstname} #{current_user.lastname}", current_user
 %br
-.dropdown
-  %button.btn.dropdown-toggle#userStatus{:type=>"button", :data=>{:toggle=>"dropdown"}}>
-    -#="#{current_user.user_stat.status_name}"
-    %span.caret
-  %ul.dropdown-menu{:role=>"menu", :aria=>{:labelledby=>"dropdownMenu1"}}
-    %li{:role=>"presentation"}
-      %a.change-status{:role=>"menuitem", :tabindex=>"-1", :data=>{:id=>"1"}, :href=>"#"} Online
-    %li{:role=>"presentation"}
-      %a.change-status{:role=>"menuitem", :tabindex=>"-1", :data=>{:id=>"2"}, :href=>"#"} Away
-    %li{:role=>"presentation"}
-      %a.change-status{:role=>"menuitem", :tabindex=>"-1", :data=>{:id=>"3"}, :href=>"#"} Do Not Distrub
-    %li.divider{:role=>"presentation"}
-    %li{:role=>"presentation"}
-      = link_to 'Logout', destroy_user_session_path, {:method=>'delete', :role=>"menuitem", :tabindex=>"-1"}
+  .dropdown
+    %button.btn.dropdown-toggle#userStatus{:type=>"button", :data=>{:toggle=>"dropdown"}}>
+      ="#{current_user.user_stat.status_name}"
+      %span.caret
+    %ul.dropdown-menu{:role=>"menu", :aria=>{:labelledby=>"dropdownMenu1"}}
+      %li{:role=>"presentation"}
+        %a.change-status{:role=>"menuitem", :tabindex=>"-1", :data=>{:id=>"1"}, :href=>"#"} Online
+      %li{:role=>"presentation"}
+        %a.change-status{:role=>"menuitem", :tabindex=>"-1", :data=>{:id=>"2"}, :href=>"#"} Away
+      %li{:role=>"presentation"}
+        %a.change-status{:role=>"menuitem", :tabindex=>"-1", :data=>{:id=>"3"}, :href=>"#"} Do Not Distrub
+      %li.divider{:role=>"presentation"}
+      %li{:role=>"presentation"}
+        = link_to 'Logout', destroy_user_session_path, {:method=>'delete', :role=>"menuitem", :tabindex=>"-1"}
   %br
   = form_tag users_path, :method => 'get' do
     = text_field_tag 'search', params[:search], :id => 'search-box'
