--- a/app/views/message/_dialog.html.haml
+++ b/app/views/message/_dialog.html.haml
@@ -1,4 +1,6 @@
 .col-md-8
+  #load_messages
+    ^
   %input.form-control#search{:placeholder=>"Search..."}
   .panel.panel-primary
     .panel-body
