--- a/app/views/layouts/_rooms_list.html.haml
+++ b/app/views/layouts/_rooms_list.html.haml
@@ -4,8 +4,8 @@
       = link_to new_room_path do
         %span.glyphicon.glyphicon-plus
           Create room
-    - if !@room.nil?
-      - @room.each do |room|
+    - if !@room_list.nil?
+      - @room_list.each do |room|
         %li
           =link_to "#{room.name}",room_path(:id=>room.id)
 
