--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -1,5 +1,5 @@
 .col-md-2
-  = render 'layouts/friend_list'
+  = render 'layouts/rooms_list'
 = render 'message/dialog'
 .col-md-2
   = render 'layouts/friends_in_rooms'
