--- a/app/assets/stylesheets/chat.css
+++ b/app/assets/stylesheets/chat.css
@@ -11,6 +11,33 @@
 .col-md-2{
     z-index: 0;
 }
+.form-control#search{
+    position: fixed;
+    width: 65%;
+    margin:8px 0px 0px 17%;
+    background-color:#313131;
+    border-color:#606060;
+    color:#878787;
+}
+.typing{
+    padding-left:100px;
+    color: #777777;
+}
+.pag{
+    height: 20px;
+    width: 98.9%;
+    position:absolute;
+    background-color: rgba(10,10,10,0.07);
+    border-radius: 0px 0px 30px 30px ;
+}
+.pag:hover {
+    background-color: rgba(10,10,10,0.25);
+
+}
+.pag .glyphicon{
+    margin:0 50% 0 50%;
+    opacity: 0.4;
+}
 
 .avatar{
     border-radius: 15px;
@@ -26,11 +53,9 @@
 .panel.panel-primary{
     border: none;
 }
-.panel.panel-primary .panel-body{
 
-}
-.panel.panel-primary .panel-footer {
-    padding: 0px;
+.panel.panel-primary .panel-footer{
+    padding: 0px 0px 0px 0px;
 }
 .panel.panel-primary .panel-footer button{
     width: 100%;
@@ -105,7 +130,7 @@
 
 ::-webkit-scrollbar
 {
-    width: 12px;
+    width: 10px;
     background-color: #F5F5F5;
 }
 
