--- a/app/assets/stylesheets/chat.css.scss
+++ b/app/assets/stylesheets/chat.css.scss
@@ -23,6 +23,9 @@
   border-color:#606060;
   color:#878787;
 }
+#userStatus i{
+  cursor: hand;
+}
 .typing{
   padding-left:100px;
   color: #777777;
