--- a/app/views/layouts/_friends_in_rooms.haml
+++ b/app/views/layouts/_friends_in_rooms.haml
@@ -14,8 +14,7 @@
                 = "#{friend.firstname} #{friend.lastname}"
     - if !@room_users.nil?
       - @room_users.each do |user|
-        %li.joined_friend{:id=>user.id,:data_user_id => user.id, :data_room_id => @room.id}
+        %li.joined_friend{:id=>user.id,:data_user_id => user.id, :data_room_id => @room.id,:data=>{:toggle=>"tooltip"}, :title=>"#{user.user_stat_id==2 ? "Offline "+time_ago_in_words(user.updated_at) : user.user_stat.status_name}"}
           %a{:href=>"#"}
             %span{:class => "glyphicon glyphicon-off #{get_user_status_icon(user.user_stat_id)}"}
             = "#{user.login}"
-            .glyphicon.glyphicon-minus.pull-right
