--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -3,7 +3,7 @@
   %span.user_name
     = link_to "#{current_user.firstname} #{current_user.lastname}", current_user
   .dropdown
-    %button.btn.dropdown-toggle#userStatus{:type=>"button", :data=>{:toggle=>"dropdown"}}>
+    %button.btn.dropdown-toggle#userStatus{:type=>"button", :data=>{:toggle=>"dropdown"}}
       %span{:class => "glyphicon glyphicon-off #{get_user_status_icon(current_user.user_stat_id)}"}
       ="#{current_user.user_stat.status_name}"
       %span.caret
