--- a/app/views/message/_dialog.html.haml
+++ b/app/views/message/_dialog.html.haml
@@ -46,10 +46,10 @@
     .panel-footer
       .typing
         %br
-      = form_for @message, :url => new_message_path,:id=>"form-message", :html => {:multipart => true}, :method=>"post" do |f|
+      = form_for @message, :authenticity_token => true, :url => new_message_path,:id=>"form-message", :html => {:multipart => true}, :method=>"post" do |f|
         = f.text_area :body , :class => "form-control", :id=>"message"
         %br
-        = f.hidden_field :room_id, :value=>6
+        = f.hidden_field :room_id, :value=>@room_id
         = f.file_field :attach_path ,:id=>"attach_path"
         %br
         = f.submit :class => "btn btn-success", :id=>"send_message"
