--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -2,17 +2,16 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.avatar {
+  width: 50px;
+  height: 50px;
+  float: left;
+}
 
 .img-profle {
   float: left;
   border-radius: 50%;
   padding: 5px 25px;
-}
-
-ul.friends_list {
-  height: 250px;
-  overflow-y: auto;
-  list-style: none;
 }
 
 #current_user > .dropdown {
@@ -27,13 +26,92 @@ ul.friends_list {
   float: right;
 }
 
-.avatar {
-  width: 50px;
-  height: 50px;
-  float: left;
+span#user_name {
+  margin-left: 100px;
+  font-size: 16px;
 }
+
 
 #user_info {
   height: 50px;
   padding: 15px 0px;
+}
+
+#photo {
+  float: left;
+  width: 175px;
+  height: 150px;
+  display: inline-block;
+}
+
+.profile {
+  height: 150px;
+  width: 450px;
+  margin: 0px auto;
+  margin-top: 50px;
+}
+
+#friendship {
+  width: 505px;
+  margin: 0px auto;
+  text-align: center;
+  margin-top: 20px;
+}
+
+ul#friends_list {
+  height: 300px;
+  width: 500px;
+  padding: 0px;
+  list-style: none;
+  overflow-y: auto;
+}
+
+.friend{
+  float: left;
+  width: 440px;
+  margin-left: 5px;
+  margin-bottom: 1px;
+  background: rgba(80,80,80, 0.1);
+}
+
+.friend_action {
+  width: 50px;
+  height: 50px;
+  float: left;
+  text-align: center;
+  padding-top: 12px;
+}
+
+.friend_action:hover {
+  background: orange;
+}
+
+.friend:hover {
+  background: rgba(80,80,80, 0.25);
+}
+
+.friend_photo {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+  float: left;
+  border-radius: 50%;
+}
+
+.friend_name {
+  float: left;
+  height: 50px;
+  padding-top: 15px;
+}
+
+.friend_name a {
+  text-decoration: none;
+}
+
+#find_more_friends{
+  font-size: 20px;
+}
+
+span.title {
+  font-size: 20px;
 }
