--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -27,10 +27,12 @@
 
 %h3
   Possible friends
-%ul.friends_list
+%ul#friends_list
   - @possible_friends.each  do |user|
-    %li
-      = image_tag avatar_url(user,50),:class => "avatar"
-      #user_info
-        = link_to user.firstname + ' ' + user.lastname, user_path(user.id), :class => 'user_name'
-        = link_to 'Add Friend', friendships_path(:friend_id => user), :method => :post
+    %li.friend{:user_id => user.id}
+      .friend_photo
+        = image_tag avatar_url(user,50),:class => "avatar"
+      .friend_name
+        = "#{user.firstname} #{user.lastname}"
+    .friend_action.add_friend{:friend_id => user.id}
+      %span{:class => "glyphicon glyphicon-plus add_new_friend"}
